<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#12151B"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/challenge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="@font/inder"
                android:text="@string/challenges"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">

                <TextView
                    android:id="@+id/join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/join_a_challenge"
                    android:textColor="#808191"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/view_all"
                    android:textColor="#78A037"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/your_challenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/your_challenges"
                android:textColor="#808191"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="156dp"
                    android:layout_height="192dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/round_shap1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="18sp"
                            android:backgroundTint="#DCB2FD"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="36dp"
                                android:layout_height="35dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/layer" />

                        </androidx.cardview.widget.CardView>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="52dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/cross" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/sugar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/sugar_free_nchallange"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="20sp"
                        android:text="@string/_20_done"
                        android:textColor="#FFA2C0"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        android:max="100"
                        android:progress="20"
                        android:progressBackgroundTint="@color/white"
                        android:progressTint="#E392AD"
                        android:thumbTint="#E392AD" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout2"
                    android:layout_width="156dp"
                    android:layout_height="192dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_shap1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="18sp"
                            android:backgroundTint="#C7E4FE"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="36dp"
                                android:layout_height="35dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/layer1" />

                        </androidx.cardview.widget.CardView>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="52dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/cross" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/sugar1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/yoga_nchallange"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="20sp"
                        android:text="@string/_50_done"
                        android:textColor="#C7E4FE"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/seekBar1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        android:max="100"
                        android:progress="50"
                        android:progressBackgroundTint="@color/white"
                        android:progressTint="#C7E4FE"
                        android:thumbTint="#C7E4FE" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/complete_challange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/completed_challanges"
                android:textColor="#808191"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/relative2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout3"
                    android:layout_width="156dp"
                    android:layout_height="192dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/round_shap1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="18sp"
                            android:backgroundTint="#DCB2FD"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="36dp"
                                android:layout_height="35dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/layer3" />

                        </androidx.cardview.widget.CardView>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="52dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/cross" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/diet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/diet_detox_nchallenge"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="20sp"
                        android:text="@string/_100_done"
                        android:textColor="#78A037"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/seekBar2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        android:max="100"
                        android:progress="100"
                        android:progressBackgroundTint="@color/white"
                        android:progressTint="#78A037"
                        android:thumbTint="#78A037" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout4"
                    android:layout_width="156dp"
                    android:layout_height="192dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_shap1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="18sp"
                            android:backgroundTint="#C7E4FE"
                            app:cardCornerRadius="20dp">

                            <ImageView
                                android:layout_width="36dp"
                                android:layout_height="35dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/layer2" />

                        </androidx.cardview.widget.CardView>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="52dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/cross" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/water"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/_3_day_water_nchallenge"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="20sp"
                        android:text="@string/_100_done"
                        android:textColor="#78A037"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/seekBar3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        android:max="100"
                        android:progress="100"
                        android:progressBackgroundTint="@color/white"
                        android:progressTint="#78A037"
                        android:thumbTint="#78A037" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#181A20"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation" />

</RelativeLayout>